# wlan-cloud-ucentralsec

./: .gitignore  BUILDING.md  CLI.md  CMakeLists.txt  CONFIGURATION.md  Dockerfile  OPERATOR.md  README.md  docker-entrypoint.sh  new.service  owsec.properties  owsec.properties.tmpl  owsec.service  readiness_check  run.sh  set_env.sh  stop.sh  ucentralsec.properties  ucentralsec.properties.aws  ucentralsec.properties.priv  ucentralsec.service  wait-for-postgres.sh
.github/workflows/: ci.yml  cleanup.yml  enforce-jira-issue-key.yml  openapi-pages.yml  release.yml
docs/: index.html
docs/design/: email_verification.md  kafka_topics.md  user_creation_flow.md
helm/: .gitignore  Chart.yaml  README.md  values.yaml
helm/templates/: _config.tpl  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret-certs.yaml  secret-config.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
openpapi/: owsec.yaml
openpapi/ucentralsec/: owsec.yaml  ucentralsec.yaml
src/: ACLProcessor.h  ALBHealthCheckServer.h  APIServers.cpp  ActionLinkManager.cpp  ActionLinkManager.h  AuthService.cpp  AuthService.h  Daemon.cpp  Daemon.h  MFAServer.cpp  MFAServer.h  MessagingTemplates.cpp  MessagingTemplates.h  RESTAPI_AssetServer.cpp  RESTAPI_AssetServer.h  RESTAPI_InternalServer.cpp  RESTAPI_InternalServer.h  RESTAPI_SecurityObjects.h  RESTAPI_action_links.cpp  RESTAPI_action_links.h  RESTAPI_avatarHandler.cpp  RESTAPI_avatarHandler.h  RESTAPI_email_handler.cpp  RESTAPI_email_handler.h  RESTAPI_errors.h  RESTAPI_handler.cpp  RESTAPI_handler.h  RESTAPI_oauth2Handler.cpp  RESTAPI_oauth2Handler.h  RESTAPI_objects.cpp  RESTAPI_objects.h  RESTAPI_server.cpp  RESTAPI_server.h  RESTAPI_sms_handler.cpp  RESTAPI_sms_handler.h  RESTAPI_systemEndpoints_handler.cpp  RESTAPI_systemEndpoints_handler.h  RESTAPI_systemServices_handler.cpp  RESTAPI_systemServices_handler.h  RESTAPI_system_command.cpp  (+39 more)
src/RESTAPI/: RESTAPI_AssetServer.cpp  RESTAPI_AssetServer.h  RESTAPI_InternalServer.cpp  RESTAPI_InternalServer.h  RESTAPI_Routers.cpp  RESTAPI_SecurityObjects.cpp  RESTAPI_action_links.cpp  RESTAPI_action_links.h  RESTAPI_apiKey_handler.cpp  RESTAPI_apiKey_handler.h  RESTAPI_asset_server.cpp  RESTAPI_asset_server.h  RESTAPI_avatarHandler.cpp  RESTAPI_avatarHandler.h  RESTAPI_avatar_handler.cpp  RESTAPI_avatar_handler.h  RESTAPI_db_helpers.h  RESTAPI_email_handler.cpp  RESTAPI_email_handler.h  RESTAPI_oauth2Handler.cpp  RESTAPI_oauth2Handler.h  RESTAPI_oauth2_handler.cpp  RESTAPI_oauth2_handler.h  RESTAPI_preferences.cpp  RESTAPI_preferences.h  RESTAPI_routers.cpp  RESTAPI_server.cpp  RESTAPI_server.h  RESTAPI_signup_handler.cpp  RESTAPI_signup_handler.h  RESTAPI_sms_handler.cpp  RESTAPI_sms_handler.h  RESTAPI_subavatar_handler.cpp  RESTAPI_subavatar_handler.h  RESTAPI_submfa_handler.cpp  RESTAPI_submfa_handler.h  RESTAPI_suboauth2_handler.cpp  RESTAPI_suboauth2_handler.h  RESTAPI_subpreferences.cpp  RESTAPI_subpreferences.h  (+26 more)
src/RESTObjects/: RESTAPI_FMSObjects.h  RESTAPI_SecurityObjects.cpp  RESTAPI_SecurityObjects.h
src/framework/: ALBHealthCheckServer.h  AuthClient.cpp  AuthClient.h  KafkaManager.cpp  KafkaManager.h  MicroService.cpp  MicroService.h  OpenAPIRequest.cpp  OpenWifiTypes.h  RESTAPI_GenericServer.h  RESTAPI_errors.h  RESTAPI_handler.cpp  RESTAPI_handler.h  RESTAPI_system_command.cpp  SubSystemServer.cpp  Utils.cpp  orm.h  ow_constants.h  qrcodegen.hpp  storage_setup.cpp
src/seclibs/cpptotp/: bytes.cpp  bytes.h  otp.cpp  otp.h  sha1.cpp  sha1.h
src/seclibs/qrcode/: qrcodegen.cpp  qrcodegen.hpp
src/storage/: orm_actionLinks.cpp  orm_actionLinks.h  orm_apikeys.cpp  orm_apikeys.h  orm_avatar.cpp  orm_avatar.h  orm_logins.cpp  orm_logins.h  orm_preferences.cpp  orm_preferences.h  orm_tokens.cpp  orm_tokens.h  orm_users.cpp  orm_users.h  storage_actionLinks.cpp  storage_actionLinks.h  storage_avatar.cpp  storage_avatar.h  storage_conversions.cpp  storage_conversions.h  storage_preferences.cpp  storage_preferences.h  storage_subscribers.cpp  storage_subscribers.h  storage_subtokens.cpp  storage_subtokens.h  storage_tables.cpp  storage_tokens.cpp  storage_tokens.h  storage_users.cpp  storage_users.h
templates/: email_invitation.html  email_invitation.txt  email_verification.html  email_verification.txt  password_reset.html  password_reset.txt  sample.html  signup_verification.html  signup_verification.txt  sub_email_verification.html  sub_email_verification.txt  sub_password_reset.html  sub_verification_code.html  sub_verification_code.txt  verification_code.html  verification_code.txt
test_scripts/curl/: cli
wwwassets/: 404_error.css  404_error.html  access_policy.html  common.css  email_validation_success.html  email_verification_error.html  email_verification_success.html  footer.html  password_policy.html  password_reset.html  password_reset_error.html  password_reset_success.html  reset_password.html  reset_password_success.html  signup_verification.html  signup_verification_error.html  signup_verification_success.html  sub_404_error.html  sub_access_policy.html  sub_email_verification_error.html  sub_email_verification_success.html  sub_footer.html  sub_password_policy.html  sub_password_reset.html  sub_password_reset_error.html  sub_password_reset_success.html  sub_signup_verification.html  sub_signup_verification_error.html  sub_signup_verification_success.html
